# oko

./: .dockerignore  .gitignore  .pylintrc  README.md  custom.Dockerfile  pyproject.toml  requirements.in  requirements.txt  script_download_pretrained.py  script_unsplash_inference.py
db/vespa/: .gitignore  docker-compose.yaml
db/vespa/src/main/application/: services.xml
db/vespa/src/main/application/schemas/: image_search.sd
fixel/: api.py
fixel/ai/clip/: __init__.py  inference.py  loader.py
fixel/io/: img.py
fixel/pipe/: feed.py
oko/ai/: __init__.py  types.py
oko/ai/clip/: __init__.py  inference.py
oko/feeding/: __init__.py  types.py
oko/io/: __init__.py  img.py
oko/pipe/: feed.py
oko/writing/: __init__.py  types.py  vespa.py
pix-weaviate/: app.py  docker-compose.yaml  job_download_pretrained.py  job_unsplash_inference.py  job_unsplash_load.py
pix-weaviate/content/: __init__.py  files.py
pix-weaviate/core/clip/: __init__.py  clip.py  pretrained.py
pix-weaviate/files/: files.py
pix-weaviate/models/: models.py
pix-weaviate/models/clip/: clip.py  download.py
quixel/io/: __init__.py  files.py
quixel/models/clip/: clip.py
vespa/: Dockerfile  pom.xml
vespa/src/main/application/: services.xml
vespa/src/main/application/schemas/: image_search.sd
